--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -5,3 +5,9 @@ Size={0} must be between {2} and {1} characters
 Size.contact.firstName=Name must be between {2} and {1} characters
 Size.contact.lastName=Name must be between {2} and {1} characters
 Size.contact.password=Password has at least {2} characters
+
+Size.firstName=Name must be between 2 and 10 characters
+Size.lastName=Name must be between 2 and 10 characters
+Size.password=Password must have at least 4 characters
+Invalid.firstName=Name must only contain characters
+Invalid.lastName=Name must only contain characters
